[workspace]
resolver = "2"
members = [
    "lib/armv9a",
    "lib/cca-token",
    "lib/cose",
    "lib/safe-abstraction",
    "lib/vmsa",
    "lib/rsi-el0",
    "lib/uart",
    "lib/io",
    "plat/fvp",
    "realm/rsi-test",
    "rmm/",
    "sdk",
    "model-checking",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
