[workspace]
resolver = "2"
members = [
    "lib/armv9a",
    "lib/cca-token", # To be deprecated
    "lib/cose",
    "lib/safe-abstraction",
    "lib/vmsa",
    "lib/uart",
    "lib/io",
    "plat/fvp",
    "realm/rsi-test",
    "rmm/",
    "sdk",
    "model-checking",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
