[workspace]
resolver = "2"
members = [
    "lib/armv9a",
    "lib/io",
    "lib/safe-abstraction",
    "lib/uart",
    "lib/vmsa",
    "model-checking",
    "plat/fvp",
    "realm/rsi-test",
    "rmm/",
    "rmm/fuzz/",
    "sdk",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[profile.fuzz]
inherits = "dev"
panic = "unwind"
