[workspace]

[package]
name = "islet_cli"
version = "0.1.0"
edition = "2021"
authors = ["Islet Contributors"]
description = "Command line interface for ISLET"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "*"
clap = { version = "*", features = ["derive"] }
colored = "*"
coset = "*"
cose = { path = "../lib/cose" }
ecdsa = "*"
hex = "*"
islet_sdk = { path = "../sdk" }
nix = "*"
rand = "*"
rsi_el0 = { path = "../lib/rsi-el0" }

[profile.release]
strip = true
