[workspace]

[package]
name = "islet_cli"
version = "0.1.0"
edition = "2021"
authors = ["Islet Contributors"]
description = "Command Line Interface for Islet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cca_token = { path = "../lib/cca-token" }
cfg-if = "1.0"
ciborium = "*"
clap = { version = "*", features = ["derive"] }
colored = "*"
hex = "*"
islet_sdk = { path = "../sdk" }
nix = "*"
rand = "*"
rsi_el0 = { path = "../lib/rsi-el0" }

[profile.release]
strip = true
