[package]
name = "islet_mc_harnesses"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[features]
# The below are features relevant for model checking
mc_rmi_features = ["islet_rmm/mc_rmi_features"]
mc_rmi_granule_delegate = ["islet_rmm/mc_rmi_granule_delegate"]
mc_rmi_granule_undelegate = ["islet_rmm/mc_rmi_granule_undelegate"]
mc_rmi_realm_activate = ["islet_rmm/mc_rmi_realm_activate"]
mc_rmi_version = ["islet_rmm/mc_rmi_version"]

[dependencies]
islet_rmm = { path = "../rmm" }
