[package]
name = "islet-rmm"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"
build   = "build.rs"

[[bin]]
name = "islet-rmm"
path = "src/main.rs"

[features]
max_level_off   = ["log/max_level_off", "islet_rmm/max_level_off"]
max_level_error = ["log/max_level_error", "islet_rmm/max_level_error"]
max_level_warn  = ["log/max_level_warn", "islet_rmm/max_level_warn"]
max_level_info  = ["log/max_level_info", "islet_rmm/max_level_info"]
max_level_debug = ["log/max_level_debug", "islet_rmm/max_level_debug"]
max_level_trace = ["log/max_level_trace", "islet_rmm/max_level_trace"]
stat = ["islet_rmm/stat"]
gst_page_table = ["islet_rmm/gst_page_table"]
fvp = ["islet_rmm/fvp"]
qemu = ["islet_rmm/qemu"]

[dependencies]
aarch64-cpu = { version = "10.0.0" }
bitflags = "1.3"
islet_rmm = { path = "../rmm" }
linked_list_allocator = "0.10.4"
log = "0.4.17"
uart = { path = "../lib/uart" }
io = { path = "../lib/io" }

[build-dependencies]
cc = "1.0"
