[package]
name = "islet_rmm"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[dependencies]
armv9a = { path = "../lib/armv9a" }
ciborium = { version = "*", default-features = false, path = "../third-party/ciborium/ciborium" }
coset = { version = "*", path = "../third-party/coset" }
hex = { version = "*", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
lock_api = "0.4.9"
log = "0.4.17"
vmsa = { path = "../lib/vmsa" }
p384 = { version = "*", default-features = false, features = ["alloc", "ecdsa"] }
ecdsa = "*"
safe_abstraction = { path = "../lib/safe-abstraction" }
sha2 = { version = "0.10.7", default-features = false }
spin = "0.9.2"
spinning_top = "0.2.4"
tinyvec = { version = "*", features = ["rustc_1_55"]}
autopadding = { path = "../lib/autopadding" }

[build-dependencies]
cc = "1.0"

[features]
max_level_off   = ["log/max_level_off"]
max_level_error = ["log/max_level_error"]
max_level_warn  = ["log/max_level_warn"]
max_level_info  = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]
realm_linux = []
stat = []
gst_page_table = []
