[package]
name = "cpak-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key-derivation = { version = "*", path = "../key-derivation" }
sha2 = { version = "*", default-features = false, features = ["oid"]}
aes = "*"
p384 = "*"
ecdsa = "*"
hkdf = "*"
clap = { version = "4.3.0", features = ["derive"] }
