[package]
name = "islet-hes-host-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
islet-hes = {version = "*", path = "../islet-hes"}
tinyvec = "*"
#coset = "*"
coset = { version = "*", path = "../../third-party/coset" }
hex = "*"
daemonize = "*"
