[package]
name = "key-derivation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "*", default-features = false, features = ["oid"]}
aes = "*"
p256 = { version = "*", default-features = false, features = ["arithmetic", "pem"] }
p384 = { version = "*", default-features = false, features = ["arithmetic", "pem"] }
elliptic-curve = "*"
hkdf = "*"
