[package]
name = "cca_token"
version = "0.1.0"
edition = "2021"
authors = ["Islet Contributors"]

[dependencies]
#ciborium = "*"
ciborium = { version = "*", path = "../../third-party/ciborium/ciborium" }
cose = { path = "../cose" }
#coset = "*"
coset = { version = "*", path = "../../third-party/coset" }
ecdsa = "*"
hex = "*"
serde = { version = "1.0", features = ["derive"] }
