[package]
name = "cose"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[dependencies]
#ciborium = "*"
ciborium = { version = "*", path = "../../third-party/ciborium/ciborium" }
#coset = "*"
coset = { version = "*", path = "../../third-party/coset" }
hex = "*"
p256 = "*"
p384 = "*"
