[package]
name = "fvp"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[[bin]]
name = "fvp"
path = "src/main.rs"

[features]
max_level_off   = ["log/max_level_off", "islet_rmm/max_level_off"]
max_level_error = ["log/max_level_error", "islet_rmm/max_level_error"]
max_level_warn  = ["log/max_level_warn", "islet_rmm/max_level_warn"]
max_level_info  = ["log/max_level_info", "islet_rmm/max_level_info"]
max_level_debug = ["log/max_level_debug", "islet_rmm/max_level_debug"]
max_level_trace = ["log/max_level_trace", "islet_rmm/max_level_trace"]

[dependencies]
armv9a = { path = "../../lib/armv9a" }
bitflags = "1.3"
islet_rmm = { path = "../../rmm" }
linked_list_allocator = "0.10.4"
log = "0.4.17"
uart = { path = "../../lib/uart" }

[build-dependencies]
cc = "1.0"
