[package]
name = "armv9a"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2018"

[lib]
name = "armv9a"
path = "src/lib.rs"

[dependencies]
linked_list_allocator = "0.10.4"
lock_api = "0.4.9"
log = "0.4.17"
monitor = { path = "../monitor" }
spin = "0.9.2"
spinning_top = "0.2.4"

[build-dependencies]
cc = "1.0"

[features]
