[package]
name = "rmm_fuzz"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
islet_rmm = { path = "../" }

[[bin]]
name = "rmi_version_fuzz"
path = "fuzz_targets/rmi_version_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_features_fuzz"
path = "fuzz_targets/rmi_features_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_granule_delegate_fuzz"
path = "fuzz_targets/rmi_granule_delegate_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_granule_undelegate_fuzz"
path = "fuzz_targets/rmi_granule_undelegate_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_realm_create_fuzz"
path = "fuzz_targets/rmi_realm_create_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rec_create_fuzz"
path = "fuzz_targets/rmi_rec_create_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_create_fuzz"
path = "fuzz_targets/rmi_rtt_create_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_read_entry_fuzz"
path = "fuzz_targets/rmi_rtt_read_entry_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_data_create_fuzz"
path = "fuzz_targets/rmi_data_create_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_data_create_unknown_fuzz"
path = "fuzz_targets/rmi_data_create_unknown_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_map_unprotected_fuzz"
path = "fuzz_targets/rmi_rtt_map_unprotected_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_init_ripas_fuzz"
path = "fuzz_targets/rmi_rtt_init_ripas_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_set_ripas_fuzz"
path = "fuzz_targets/rmi_rtt_set_ripas_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rec_enter_fuzz"
path = "fuzz_targets/rmi_rec_enter_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_psci_complete_fuzz"
path = "fuzz_targets/rmi_psci_complete_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rmi_rtt_fold_fuzz"
path = "fuzz_targets/rmi_rtt_fold_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi_abi_version_fuzz"
path = "fuzz_targets/rsi_abi_version_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi_psci_features_fuzz"
path = "fuzz_targets/rsi_psci_features_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi_measurement_read_fuzz"
path = "fuzz_targets/rsi_measurement_read_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rsi_measurement_extend_fuzz"
path = "fuzz_targets/rsi_measurement_extend_fuzz.rs"
test = false
doc = false
bench = false
