[package]
name = "monitor"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[lib]
name = "monitor"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
max_level_off   = ["log/max_level_off"]
max_level_error = ["log/max_level_error"]
max_level_warn  = ["log/max_level_warn"]
max_level_info  = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
lock_api = "0.4.9"
log = "0.4.17"
spin = "0.9.2"
spinning_top = "0.2.4"
hashbrown = "0.14"
