[workspace]

[package]
name = "cloak-test-server"
version = "0.1.0"
edition = "2021"
authors = [ "Islet Contributors" ]
description = "test-server for testing Cloak's remote channels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
