[workspace]

[package]
name = "realm-gateway"
version = "0.1.0"
edition = "2021"
authors = [ "Islet Contributors" ]
description = "Realm gateway for Cloak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
#rust-rsi = { git = "https://github.com/islet-project/remote-attestation" }
#ratls = { git = "https://github.com/islet-project/remote-attestation" }
ratls = { path = "../../../../remote-attestation/lib/ratls/ratls" }
rust-rsi = { path = "../../../../remote-attestation/lib/rust-rsi" }
sha2 = "*"

[profile.release]
strip = true
