[workspace]

[package]
name = "rsictl"
version = "0.1.0"
edition = "2021"
authors = ["Islet Contributors"]
description = "Command line interface for the RSI kernel module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
nix = "*"
rand = "*"
hex = "*"
ciborium = "*"
coset = "*"
p256 = "*"
p384 = "*"
ecdsa = "*"

[profile.release]
strip = true
