[workspace]

[package]
name = "rsictl"
version = "0.1.0"
edition = "2021"
authors = ["Islet Contributors"]
description = "Command line interface for the RSI kernel module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "*"
clap = { version = "*", features = ["derive"] }
coset = "*"
ecdsa = "*"
hex = "*"
nix = "*"
p256 = "*"
p384 = "*"
rand = "*"
rsi_el0 = { path = "../../../lib/rsi-el0" }

[profile.release]
strip = true
